--- a/Page d'accueil du magasin de vidéo/Home.html
+++ b/Page d'accueil du magasin de vidéo/Home.html
@@ -21,5 +21,8 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <h1>Nothing in here. Check "Used DVDs"</h1>
+    </section>
 </body>
 </html>
