--- a/Page d'accueil du magasin de vidéo/Less than £10.html
+++ b/Page d'accueil du magasin de vidéo/Less than £10.html
@@ -13,17 +13,17 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to rent.html">Videos to rent</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to buy.html">Videos to buy</a></li>
+                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
+                <li><a href="Videos to rent.html">Videos to rent</a></li>
+                <li><a href="Videos to buy.html">Videos to buy</a></li>
                 <li><a href="#">Used DVDs</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Offers.html">Offers</a></li>
+                <li><a href="Offers.html">Offers</a></li>
             </ul>
         </nav>
         <nav class="breadcrumb">
             <ul>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Home.html">Home</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Used DVDs.html">Used DVDs</a></li>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Used DVDs.html">Used DVDs</a></li>
                 <li><a href="#">Less than £10</a></li>
             </ul>
         </nav>
@@ -34,37 +34,37 @@
     </section>
     <section class="first">
         <div class="product">
-            <img src="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\product-img1.png" alt="product" width="100%">
-            <h2 class="title"><b>Video title 1</b></h2>
-            <p><span style="color: grey"><b>PRP: £18.99</b></span><br>
-                Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+            <img src="product-img1.png" alt="product" width="100%">
+            <h1>Video title 1</h1>
+            <h4>PRP: £18.99</h4>
+            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
                 <span style="color: green"><b>Your saving £9</b></span>
             </p>
         </div>
 
         <div class="product">
-            <img src="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\product-img2.png" alt="product" width="100%">
-            <h2 class="title"><b>Video title 2</b></h2>
-            <p><span style="color: grey"><b>PRP: £18.99</b></span><br>
-                Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+            <img src="product-img2.png" alt="product" width="100%">
+            <h1>Video title 2</h1>
+            <h4>PRP: £18.99</h4>
+            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
                 <span style="color: green"><b>Your saving £9</b></span>
             </p>
         </div>
 
         <div class="product">
-            <img src="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\product-img3.png" alt="product" width="100%">
-            <h2 class="title"><b>Video title 3</b></h2>
-            <p><span style="color: grey"><b>PRP: £18.99</b></span><br>
-                Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+            <img src="product-img3.png" alt="product" width="100%">
+            <h1>Video title 3</h1>
+            <h4>PRP: £18.99</h4>
+            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
                 <span style="color: green"><b>Your saving £9</b></span>
             </p>
         </div>
 
         <div class="product">
-            <img src="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\product-img4.png" alt="product" width="100%">
-            <h1 class="title"><b>Video title 4</b></h1>
-            <p><span style="color: grey"><b>PRP: £18.99</b></span><br>
-                Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+            <img src="product-img4.png" alt="product" width="100%">
+            <h1>Video title 4</h1>
+            <h4>PRP: £18.99</h4>
+            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
                 <span style="color: green"><b>Your saving £9</b></span>
             </p>
         </div>    
