--- a/Page d'accueil du magasin de vidéo/Used DVDs.html
+++ b/Page d'accueil du magasin de vidéo/Used DVDs.html
@@ -13,22 +13,22 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to rent.html">Videos to rent</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to buy.html">Videos to buy</a></li>
+                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
+                <li><a href="Videos to rent.html">Videos to rent</a></li>
+                <li><a href="Videos to buy.html">Videos to buy</a></li>
                 <li><a href="#">Used DVDs</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Offers.html">Offers</a></li>
+                <li><a href="Offers.html">Offers</a></li>
             </ul>
         </nav>
         <nav class="breadcrumb">
             <ul>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Home.html">Home</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Used DVDs.html">Used DVDs</a></li>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Used DVDs.html">Used DVDs</a></li>
             </ul>
         </nav>
     </header>
     <section>
-        <a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Less than £10.html">Less than £10</a>
+        <a href="Less than £10.html">Less than £10</a>
     </section>
 </body>
 </html>
