--- a/Page d'accueil du magasin de vidéo/Videos to buy.html
+++ b/Page d'accueil du magasin de vidéo/Videos to buy.html
@@ -13,11 +13,11 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to rent.html">Videos to rent</a></li>
+                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
+                <li><a href="Videos to rent.html">Videos to rent</a></li>
                 <li><a href="#">Videos to buy</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Used DVDs.html">Used DVDs</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Offers.html">Offers</a></li>
+                <li><a href="Used DVDs.html">Used DVDs</a></li>
+                <li><a href="Offers.html">Offers</a></li>
             </ul>
         </nav>
         <nav class="breadcrumb">
