--- a/Page d'accueil du magasin de vidéo/Offers.html
+++ b/Page d'accueil du magasin de vidéo/Offers.html
@@ -13,10 +13,10 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to rent.html">Videos to rent</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Videos to buy.html">Videos to buy</a></li>
-                <li><a href="C:\Users\skyse\CamelCase\Page d'accueil du magasin de vidéo\Used DVDs.html">Used DVDs</a></li>
+                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
+                <li><a href="Videos to rent.html">Videos to rent</a></li>
+                <li><a href="Videos to buy.html">Videos to buy</a></li>
+                <li><a href="Used DVDs.html">Used DVDs</a></li>
                 <li><a href="#">Offers</a></li>
             </ul>
         </nav>
