--- a/Création d'un site web de portail immobilier/Index.html
+++ b/Création d'un site web de portail immobilier/Index.html
@@ -35,9 +35,9 @@
             <div class="form-example">
                 <label for="Type de propriété">Type de propriété :</label>
                 <input type="checkbox" name="Pleine propriété" id="type"><span> Pleine propriété</span>
-                <input type="checkbox" name="Copropriété" id="type"><span> Pleine propriété</span>
-                <input type="checkbox" name="Propriété démembrée" id="type"><span> Pleine propriété</span>
-                <input type="checkbox" name="Indivision" id="type"><span> Pleine propriété</span>
+                <input type="checkbox" name="Copropriété" id="type"><span> Copropriété</span>
+                <input type="checkbox" name="Propriété démembrée" id="type"><span> Propriété démembrée</span>
+                <input type="checkbox" name="Indivision" id="type"><span> Indivision</span>
             </div>
 
             <div class="form-example">
