--- a/Page d'accueil du magasin de vidéo/Videos to buy.html
+++ b/Page d'accueil du magasin de vidéo/Videos to buy.html
@@ -22,8 +22,8 @@
         </nav>
         <nav class="breadcrumb">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Videos to buy</a></li>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="#">Videos to buy</a></li>
             </ul>
         </nav>
     </header>
