--- a/Page d'accueil du magasin de vidéo/Less than £10.html
+++ b/Page d'accueil du magasin de vidéo/Less than £10.html
@@ -13,13 +13,19 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
+                <div class="col1">
+                <li><a href="Home.html"><img src="VID LOGO.jpg" alt="logo" width="150px" style="text-align: center;"></a></li>
+                </div>
+                <div class="col2">
                 <li><a href="Videos to rent.html">Videos to rent</a></li>
                 <li><a href="Videos to buy.html">Videos to buy</a></li>
                 <li><a href="#">Used DVDs</a></li>
                 <li><a href="Offers.html">Offers</a></li>
+                </div>
             </ul>
         </nav>
+    </header>
+    <main>
         <nav class="breadcrumb">
             <ul>
                 <li><a href="Home.html">Home</a></li>
@@ -27,47 +33,76 @@
                 <li><a href="#">Less than £10</a></li>
             </ul>
         </nav>
-    </header>
-    <section>
-        <h2>Videos less than £10</h2>
-        <div style="width: 50%;"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit velit, sagittis suscipit nunc et, vulputate vulputate nunc. Aenean sit amet consectetur augue.</p></div>
-    </section>
-    <section class="first">
-        <div class="product">
-            <img src="product-img1.png" alt="product" width="100%">
-            <h1>Video title 1</h1>
-            <h4>PRP: £18.99</h4>
-            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                <span style="color: green"><b>Your saving £9</b></span>
-            </p>
-        </div>
+        <section>
+            <h1>Get the best <span style="color: x;">Vidio Premium</span> for less than £10</h1>
+            <h3>Enjoy ad-free video watching, offline playback, and more. Cancel anytime.</h3>
+        </section>
+        <section class="first">
+            <div class="product">
+                <img src="ms.jpg" alt="product" width="100%">
+                <h1>Video title 1</h1>
+                <h4>PRP: £18.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+                    <span style="color: green"><b>Your saving £9</b></span>
+                </p>
+            </div>
 
-        <div class="product">
-            <img src="product-img2.png" alt="product" width="100%">
-            <h1>Video title 2</h1>
-            <h4>PRP: £18.99</h4>
-            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                <span style="color: green"><b>Your saving £9</b></span>
-            </p>
-        </div>
+            <div class="product">
+                <img src="jl.jpg" alt="product" width="100%">
+                <h1>Video title 2</h1>
+                <h4>PRP: £18.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+                    <span style="color: green"><b>Your saving £9</b></span>
+                </p>
+            </div>
 
-        <div class="product">
-            <img src="product-img3.png" alt="product" width="100%">
-            <h1>Video title 3</h1>
-            <h4>PRP: £18.99</h4>
-            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                <span style="color: green"><b>Your saving £9</b></span>
-            </p>
-        </div>
+            <div class="product">
+                <img src="sch.jpg" alt="product" width="100%">
+                <h1>Video title 3</h1>
+                <h4>PRP: £18.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+                    <span style="color: green"><b>Your saving £9</b></span>
+                </p>
+            </div>
 
-        <div class="product">
-            <img src="product-img4.png" alt="product" width="100%">
-            <h1>Video title 4</h1>
-            <h4>PRP: £18.99</h4>
-            <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                <span style="color: green"><b>Your saving £9</b></span>
-            </p>
-        </div>    
-</section>
+            <div class="product">
+                <img src="ba.jpg" alt="product" width="100%">
+                <h1>Video title 4</h1>
+                <h4>PRP: £18.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
+                    <span style="color: green"><b>Your saving £9</b></span>
+                </p>
+            </div>    
+        </section>
+    </main>
+    <footer>
+        <div><a href="Home.html"><img src="VID LOGO.jpg" alt="logo" width="150px" style="text-align: center;"></a></div>
+        <div class="fb">
+            <ul>
+                <li><h4>COMPANY</h4></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">For the Record</a></li>
+            </ul>
+        </div>
+        <div class="fb">
+            <ul>
+                <li><h4>COMMUNITIES</h4></li>
+                <li><a href="#">For Artists</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Investors</a></li>
+                <li><a href="#">Vendors</a></li>
+            </ul>
+        </div>
+        <div class="fb">
+            <ul>
+                <li><h4>USEFUL LINKS</h4></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Web Player</a></li>
+                <li><a href="#">Free Mobile App</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
