--- a/Page d'accueil du magasin de vidéo/index.html
+++ b/Page d'accueil du magasin de vidéo/index.html
@@ -19,7 +19,7 @@
                 <div class="col2">
                 <li><a href="Videos to rent.html">Videos to rent</a></li>
                 <li><a href="Videos to buy.html">Videos to buy</a></li>
-                <li><a href="#">Used DVDs</a></li>
+                <li><a href="Used DVDs.html">Used DVDs</a></li>
                 <li><a href="Offers.html">Offers</a></li>
                 </div>
             </ul>
@@ -40,37 +40,37 @@
         <section class="first">
             <div class="product">
                 <img src="ms.jpg" alt="product" width="100%">
-                <h1>Video title 1</h1>
-                <h4>PRP: £18.99</h4>
-                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                    <span style="color: green"><b>Your saving £9</b></span>
+                <h1>Réelle Vie 3.0</h1>
+                <h4>PRP: £49.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.97</span><br>
+                    <span style="color: green"><b>Your saving £40</b></span>
                 </p>
             </div>
 
             <div class="product">
                 <img src="jl.jpg" alt="product" width="100%">
-                <h1>Video title 2</h1>
-                <h4>PRP: £18.99</h4>
-                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                    <span style="color: green"><b>Your saving £9</b></span>
+                <h1>LZE Personne</h1>
+                <h4>PRP: £34.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.97</span><br>
+                    <span style="color: green"><b>Your saving £25</b></span>
                 </p>
             </div>
 
             <div class="product">
                 <img src="sch.jpg" alt="product" width="100%">
-                <h1>Video title 3</h1>
-                <h4>PRP: £18.99</h4>
-                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                    <span style="color: green"><b>Your saving £9</b></span>
+                <h1>JVLIVS II</h1>
+                <h4>PRP: £31.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.97</span><br>
+                    <span style="color: green"><b>Your saving £22</b></span>
                 </p>
             </div>
 
             <div class="product">
                 <img src="ba.jpg" alt="product" width="100%">
-                <h1>Video title 4</h1>
-                <h4>PRP: £18.99</h4>
-                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.99</span><br>
-                    <span style="color: green"><b>Your saving £9</b></span>
+                <h1>ULTRA</h1>
+                <h4>PRP: £54.99</h4>
+                <p>Price you pay <span style="font-weight: bold;text-decoration: underline;">£9.97</span><br>
+                    <span style="color: green"><b>Your saving £45</b></span>
                 </p>
             </div>    
         </section>
