--- a/Page d'accueil du magasin de vidéo/Used DVDs.html
+++ b/Page d'accueil du magasin de vidéo/Used DVDs.html
@@ -13,22 +13,57 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
-                <li><a href="Videos to rent.html">Videos to rent</a></li>
-                <li><a href="Videos to buy.html">Videos to buy</a></li>
-                <li><a href="#">Used DVDs</a></li>
-                <li><a href="Offers.html">Offers</a></li>
-            </ul>
-        </nav>
-        <nav class="breadcrumb">
-            <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Used DVDs.html">Used DVDs</a></li>
+                <div class="col1">
+                    <li><a href="Home.html"><img src="VID LOGO.jpg" alt="logo" width="150px" style="text-align: center;"></a></li>
+                </div>
+                <div class="col2">
+                    <li><a href="Videos to rent.html">Videos to rent</a></li>
+                    <li><a href="Videos to buy.html">Videos to buy</a></li>
+                    <li><a href="#">Used DVDs</a></li>
+                    <li><a href="Offers.html">Offers</a></li>
+                </div>
             </ul>
         </nav>
     </header>
-    <section>
-        <a href="Less than £10.html">Less than £10</a>
-    </section>
+    <main>
+        <nav class="breadcrumb">
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="#">Used DVDs</a></li>
+            </ul>
+        </nav>
+        <section class="bg">
+            <a href="index.html">Less than £10</a>
+        </section>
+    </main>
+    <footer>
+        <div><a href="Home.html"><img src="VID LOGO.jpg" alt="logo" width="150px" style="text-align: center;"></a></div>
+        <div class="fb">
+            <ul>
+                <li><h4>COMPANY</h4></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">For the Record</a></li>
+            </ul>
+        </div>
+        <div class="fb">
+            <ul>
+                <li><h4>COMMUNITIES</h4></li>
+                <li><a href="#">For Artists</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Investors</a></li>
+                <li><a href="#">Vendors</a></li>
+            </ul>
+        </div>
+        <div class="fb">
+            <ul>
+                <li><h4>USEFUL LINKS</h4></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Web Player</a></li>
+                <li><a href="#">Free Mobile App</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
