--- a/Page d'accueil du magasin de vidéo/Videos to rent.html
+++ b/Page d'accueil du magasin de vidéo/Videos to rent.html
@@ -13,22 +13,57 @@
     <header>
         <nav class="navigation">
             <ul>
-                <li><a href="Home.html"><img src="Logo.png" alt="logo" width="150px"></a></li>
-                <li><a href="#">Videos to rent</a></li>
-                <li><a href="Videos to buy.html">Videos to buy</a></li>
-                <li><a href="Used DVDs.html">Used DVDs</a></li>
-                <li><a href="Offers.html">Offers</a></li>
+                <div class="col1">
+                    <li><a href="Home.html"><img src="VID LOGO.jpg" alt="logo" width="150px" style="text-align: center;"></a></li>
+                </div>
+                <div class="col2">
+                    <li><a href="#">Videos to rent</a></li>
+                    <li><a href="Videos to buy.html">Videos to buy</a></li>
+                    <li><a href="Used DVDs.html">Used DVDs</a></li>
+                    <li><a href="Offers.html">Offers</a></li>
+                </div>
             </ul>
         </nav>
+    </header>
+    <main>
         <nav class="breadcrumb">
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="#">Videos to rent</a></li>
             </ul>
         </nav>
-    </header>
-    <section>
-        <h1>Nothing in here. Check "Used DVDs"</h1>
-    </section>
+        <section class="bg">
+            <h1>Nothing in here. Check "Used DVDs"</h1>
+        </section>
+    </main>
+    <footer>
+        <div><a href="Home.html"><img src="VID LOGO.jpg" alt="logo" width="150px" style="text-align: center;"></a></div>
+        <div class="fb">
+            <ul>
+                <li><h4>COMPANY</h4></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">For the Record</a></li>
+            </ul>
+        </div>
+        <div class="fb">
+            <ul>
+                <li><h4>COMMUNITIES</h4></li>
+                <li><a href="#">For Artists</a></li>
+                <li><a href="#">Developers</a></li>
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Investors</a></li>
+                <li><a href="#">Vendors</a></li>
+            </ul>
+        </div>
+        <div class="fb">
+            <ul>
+                <li><h4>USEFUL LINKS</h4></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Web Player</a></li>
+                <li><a href="#">Free Mobile App</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
